# euCy

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: conf.py  index.rst  installation.rst  usage.rst
eucy/: __init__.py  content.py  elements.py  eucy.py  exceptions.py  modfiy.py  modify.py  regex.py  structure.py  tokenizer.py  utils.py
eucy/amendmerge/: amendments.py  ep_reports.py
eucy/entities/: __init__.py  references.py
eucy/modify/: __init__.py  article_elements.py
euplexcy/: __init__.py  elements.py  euplexcy.py  exceptions.py  regex.py  structure.py  tokenizer.py  utils.py
euplexcy/entities/: __init__.py  references.py
euplexer/: __init__.py  cli.py  elements.py  euplexer.py  exceptions.py  regex.py  structure.py  utils.py
euplexer/entities/: __init__.py  references.py
tests/: __init__.py  _test_eucy.py  conftest.py  example_2_w_toc.txt  test_eucy.py  test_eucy2.py  test_eucy_objects.py  test_euplexcy.py  test_euplexer.py  test_modify.py  test_unit_tests.py
tests/data/: download_from_eurlex.py
