[tool]
[tool.poetry]
name = "euCy"
version = "0.1.0"
homepage = "https://github.com/ghxm/eucy"
description = "spaCy pipeline component for analyzing the complexity of EU legal texts."
authors = ["Maximilian Haag <maximilian.haag@gsi.uni-muenchen.de>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "eucy" },
    #{ include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
spacy = ">=3.0.5"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"

[tool.poetry.scripts]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl"}
bs4 = "^0.0.1"
lxml = "^4.9.3"
pytest-lazy-fixture = "^0.6.3"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
krippendorff = "^0.6.0"
pandas = "^2.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
